--- a/src/app/champions/champions-list/champions-list.component.html
+++ b/src/app/champions/champions-list/champions-list.component.html
@@ -32,11 +32,9 @@
     <tr mat-row (click)="logData(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator showFirstLastButtons
-                [length]="count"
-                [pageSize]="7"
-                [pageSizeOptions]="[5, 10, 15, 20, 100]"
-                aria-label="Select page"
-                layout-align="center">
+  <mat-paginator showFirstLastButtons     [length]="count"
+                [pageSize]="7"            [pageSizeOptions]="[5, 10, 15, 20, 100]"
+                aria-label="Select page"  layout-align="center"
+  >
   </mat-paginator>
 </div>
