--- a/src/app/champions/champions.component.css
+++ b/src/app/champions/champions.component.css
@@ -1,1 +1,8 @@
-
+h1 {
+  font-size: 32px;
+  text-align: center;
+  font-family: 'Playfair Display', serif !important;
+}
+.versionInput{
+  float: right;
+}
