--- a/src/app/champions/champions.component.html
+++ b/src/app/champions/champions.component.html
@@ -1,11 +1,20 @@
-<div class="container">
-  <mat-form-field appearance="fill">
-    <mat-label>choose the Version</mat-label>
-    <mat-select [(value)]="version" (valueChange)="doSomthing()">
-      <mat-option value="V1">V 7.18.1</mat-option>
-      <mat-option value="V2">V 7.17.2</mat-option>
-    </mat-select>
-  </mat-form-field>
-  <app-champions-list [dataSource]='dataSource' ></app-champions-list>
+<div class="main">
+  <div class="header">
+    <h1>Lol's Champions</h1>
+  </div>
+  <div class="container">
+
+    <mat-form-field class="versionInput" appearance="fill">
+      <mat-label>choose the Version</mat-label>
+      <mat-select [(value)]="version" (valueChange)="switchVersion()">
+        <mat-option value="V1">V 7.18.1</mat-option>
+        <mat-option value="V2">V 7.17.2</mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <app-champions-list [dataSource]='dataSource' ></app-champions-list>
+
+  </div>
 </div>
+
 
