--- a/src/app/champions/champions.component.html
+++ b/src/app/champions/champions.component.html
@@ -1,6 +1,6 @@
 <div class="main">
   <div class="header">
-    <h1>Lol's Champions</h1>
+    <img src="/assets/lol.png" alt="" srcset="">
   </div>
   <div class="container">
 
