--- a/src/app/champions/details/details.component.html
+++ b/src/app/champions/details/details.component.html
@@ -2,7 +2,7 @@
   <h2 mat-dialog-title> {{ data.key }} </h2>
   <mat-dialog-content> {{ data.title  }} </mat-dialog-content>
   <mat-dialog-actions class="deleteButton">
-    <button mat-icon-button mat-dialog-close color="primary" (click)="delete(data.name)">
+    <button mat-icon-button mat-dialog-close color="warn" (click)="delete(data.name)">
       <mat-icon>delete</mat-icon>
     </button>
   </mat-dialog-actions>
