--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 html, body {
   height: 100%;
-  background-color: #b9c1cc;
+  background-color: #B9C20F;
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 th{
